# sit-position

./: .gitignore  README.md  SitMonitor.spec  SitMonitor_win.spec  build_app.bat  build_app.ps1  build_app.sh  build_dmg.sh  build_signed.sh  com.zoubenjia.sit-monitor.plist  pyproject.toml  requirements.txt  service.bat  service.ps1  service.sh  setup.bat  setup.ps1  setup.sh  sit_monitor.py
.github/workflows/: build.yml
build-resources/: entitlements.plist
docs/: gen_demo.py  index.html
docs/superpowers/plans/: 2026-06-09-progressive-correction-plan.md  2026-06-09-web-version.md  2026-06-22-idle-deep-sleep.md
docs/superpowers/specs/: 2026-06-09-menubar-icon-redesign-design.md  2026-06-09-progressive-correction-plan-design.md  2026-06-09-web-version-design.md  2026-06-22-idle-deep-sleep-design.md
docs/web/: index.html
docs/web/css/: style.css
docs/web/js/: app.js  camera.js  detector.js  i18n.js  iconSymbol.js  landmarks.js  overlay.js  posture.js  reminder.js  settings.js
docs/web/test/: iconSymbol.test.mjs  (+2 more)
scripts/: eval_deep_sleep.py
sit_monitor/: __init__.py  __main__.py  core.py  debug.py  fatigue.py  icon_gen.py  icons.py  idle.py  mcp_server.py  overlay.py  paths.py  platform.py  platform_mac.py  platform_win.py  posture.py  progression.py  report.py  settings.py  stats.py  tray.py  tray_win.py  tts.py  updater.py
sit_monitor/cloud/: __init__.py  achievements.py  battle.py  client.py  models.py  oauth_server.py  social_auth.py  sync.py
sit_monitor/exercise/: __init__.py  base.py  battle_monitor.py  pushup.py  voice_coach.py
sit_monitor/i18n/: __init__.py  en.py  zh.py
sit_position_mobile/: README.md  pubspec.yaml
sit_position_mobile/lib/: main.dart
sql/: battle_schema.sql
tests/: test_achievements.py  test_battle.py  test_cloud.py  test_eval_deep_sleep.py  test_i18n.py  test_idle.py  test_oauth.py  test_posture.py  test_progression.py  test_report.py  test_settings.py
(+9 files in other folders)
