[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sit-monitor"
version = "1.1.0"
description = "坐姿监控程序 - 使用摄像头检测不良坐姿并发送系统通知"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Benjia Zou" }]
dependencies = [
    "mediapipe",
    "opencv-python",
    "numpy",
    "rumps",
    "httpx>=0.27",
]

[project.scripts]
sit-monitor = "sit_monitor.__main__:main"

[tool.setuptools.packages.find]
include = ["sit_monitor*"]
